added more styles because stylish

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 
 <head>
     <title>HTML Tutorial</title>
+    <style>
+        h1 {
+            color: yellow;
+            background: green;
+        }
+        p {
+            color: green;
+            background: lightgreen;
+        }
+        body {
+            background: pink;
+        }
+    </style>
 </head>
 
-<body style="background-color:grey;">
+<body>
 
     <h1>Hello Alex This Is A Present for you</h1>
     <p>I hope you enjoy it!</p>
