--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>HTML Tutorial</title>
+    <title>HTML Pwnage</title>
     <style>
         h1 {
             color: yellow;
@@ -20,7 +20,7 @@
 
 <body>
 
-    <h1>Hello Alex This Is A Present for you</h1>
+    <h1>Hello Hunter This Is my retaliation</h1>
     <p>I hope you enjoy it!</p>
     
     
